--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "webpack-dev-server": "~0.9.4"
   },
   "dependencies": {
+    "source-map": "https://github.com/sokra/source-map/archive/master.tar.gz",
     "style-loader": "~0.5.0",
     "url-loader": "~0.5.1",
     "less-loader": "~0.5.0",
