--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
   "author": "Tobias Koppers @sokra",
   "license": "MIT",
   "devDependencies": {
-    "webpack": "~0.9.3",
-    "webpack-dev-server": "~0.9.4"
+    "webpack": "~0.10.0",
+    "webpack-dev-server": "~0.10.0"
   },
   "dependencies": {
-    "source-map": "https://github.com/sokra/source-map/archive/master.tar.gz",
+    "source-map": "0.1.x",
     "style-loader": "~0.5.0",
     "url-loader": "~0.5.1",
     "less-loader": "~0.5.0",
-    "css-loader": "~0.5.2",
+    "css-loader": "~0.6.0",
     "jade-loader": "~0.5.0",
     "json-loader": "~0.5.0",
     "raw-loader": "~0.5.0",
-    "uglify-js": "~2.2.5",
-    "imports-loader": "~0.5.0"
+    "uglify-js": "~2.3.6",
+    "imports-loader": "~0.6.1"
   }
 }
