--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "css-loader": "^0.23.1",
+    "escape-html": "^1.0.3",
     "file-loader": "^0.8.5",
     "imports-loader": "^0.6.1",
     "jade": "^1.11.0",
