--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline --hot --devtool eval",
+    "start": "webpack-dev-server --inline --hot",
     "build": "webpack -p --progress --profile",
     "deploy": "gh-pages -d build"
   },
